# ic-2fa-auth

./: .gitignore  .prettierignore  .prettierrc  LICENSE  README.md  angular.json  canister_ids.json  components.json  dfx.json  docker-compose.yml  eslint.config.js  eslint.config.mjs  mops.toml  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.mts
.github/workflows/: publish.yml
identity/ic2fa/: identity.json  identity.pem
public/: .ic-assets.json5
public/.well-known/: apple-app-site-association  assetlinks.json
scripts/: deploy.sh  install-ca.sh  install.sh
src/: env.d.ts  index.html  main.ts  styles.css  styles.scss
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.staging.conf.json
src-tauri/capabilities/: default.json  main.json
src-tauri/src/: lib.rs  main.rs
src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts
src/app/components/auth/: auth.component.css  auth.component.html  auth.component.scss  auth.component.ts
src/app/components/copy-to-clipboard/: copy-to-clipboard.component.ts
src/app/components/create-secret/: create-secret.component.html  create-secret.component.ts
src/app/components/dashboard/: dashboard.component.css  (+3 more)
src/backend/: main.mo  types.mo  utils.mo
src/declarations/ic-2fa-auth-backend/: ic-2fa-auth-backend.did  ic-2fa-auth-backend.did.d.ts  ic-2fa-auth-backend.did.js  index.d.ts  index.js
src/declarations/ic-2fa-auth-frontend/: index.d.ts  index.js
src/environments/: environment.prod.ts  environment.staging.ts  environment.ts
(+101 files in other folders)
